added ScalaTest to test the data verification steps